downgrade JDA to 4.4.0_350 and impl. apis for remove errors in code